# pyramid_royal

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  README.md  README.rst  README.txt  example.ini  requirements-dev.txt  requirements-sphinx.txt  requirements-test.txt  setup.cfg  setup.py
docs/: Guardfile  Makefile
docs/source/: conf.py  example.rst  index.rst  overview.rst
example/: __init__.py
example/ext/sqla/: __init__.py  alembic.ini
example/ext/sqla/db/: env.py
example/ext/sqla/db/versions/: 1162611363e2_create_user_table.py
example/ext/sqla/model/: __init__.py  meta.py  project.py
example/ext/sqla/resources/: __init__.py  projects.py
example/model/: __init__.py  base.py  photo.py  user.py
example/resources/: __init__.py  photo.py  photos.py  root.py  singer.py  singer_song.py  user.py  user_photo.py  users.py  users_photos.py
royal/: __init__.py  declarative.py  deserializer.py  directives.py  exceptions.py  interfaces.py  presources.py  renderer.py  resource.py  testing.py  utility.py  views.py
royal/ext/: sqla.py  sqlalchemy_base.py
royal/tests/: __init__.py
royal/tests/functional/: __init__.py  test_example.py  test_presources.py  test_sa_example.py
royal/tests/unittests/: test_resource.py  test_resources.py  test_views.py
