[metadata]
name = pyramid_royal
version = 0.6-dev0
summary = Pyramid extension for writing RESTful web applications.
description-file = README.md
requires-dist =
    onctuous
    pyramid < 1.5

[files]
packages =
    royal
    royal.tests
    royal.tests.functional
    royal.tests.unittests
    example
    example.resources

packages_data =
    royal =


[nosetests]
match = ^test
nocapture = 1
cover-package = royal
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
