[metadata]
name = pyramid_royal
version = 0.6-dev1
author = Hadrien David
summary = Pyramid extension for writing RESTful web applications using
          traversal.
description-file = README.rst
requires-dist =
    voluptuous
    pyramid < 1.5
author = Hadrien David
url = http://github.com/hadrien/pyramid_royal
keywords = web wsgi pylons pyramid REST traversal
classifier =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Framework :: Pyramid
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI

[files]
packages =
    royal
    royal.tests
    royal.tests.functional
    royal.tests.unittests


[nosetests]
match = ^test
nocapture = 1
cover-package = royal
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
