[metadata]
name = pyramid_royal
version = 0.8.4.dev0
author = Hadrien David
author_email = hadrien+pypi@ectobal.com
home_page = https://github.com/hadrien/pyramid_royal
summary = 
	Pyramid extension using traversal which eases writing RESTful web
	applications.
description-file = 
	README.rst
	CHANGES.rst
requires-dist = 
	pyramid
url = http://github.com/hadrien/pyramid_royal
keywords = web wsgi pylons pyramid REST traversal
classifier = 
	Development Status :: 3 - Alpha
	Environment :: Plugins
	Framework :: Pyramid
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: WSGI

[files]
packages = 
	royal
	royal.tests
	royal.tests.functional
	royal.tests.unittests

[nosetests]
match = ^test
nocapture = 0
cover-package = royal
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1

[noah]
public = True

